<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@color/black"
        android:orientation="vertical"
        android:gravity="end|bottom"
        >

        <TextView
            android:id="@+id/tvTopAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|bottom"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:layout_marginEnd="10dp"
            android:elevation="5dp"
            />

        <TextView
            android:id="@+id/tvBottomAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="end|bottom"
            android:text=""
            android:textColor="@color/white"
            android:textSize="35sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_weight="1"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/tvClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_weight="1"
            android:textColor="@color/yellow"
            android:layout_margin="2dp"
            android:text="@string/clear"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <Button
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:text="@string/delete"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tvPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/percentage"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
            />

        <Button
            android:id="@+id/tvDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/divide"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_weight="1"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/tvSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/seven"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <Button
            android:id="@+id/tvEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text= "@string/eight"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <Button
            android:id="@+id/tvNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/nine"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/tvMultiple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:text="@string/multiple"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_weight="1"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/tvFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/four"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/tvFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text= "@string/five"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/tvSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/six"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <Button
            android:id="@+id/tvSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:text="@string/subtract"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_weight="1"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/tvOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/tvTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text= "@string/two"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/tvThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/tvAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:text="@string/add"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_weight="1"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/tvZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="25sp"
            android:textStyle="bold"
            />



        <Button
            android:id="@+id/tvDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/decimal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/white"
            android:gravity="center"
            />

        <Button
            android:id="@+id/tvEqualTo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/equalTo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/gray"
            android:textColor="@color/yellow"
            android:gravity="center"
        />

    </LinearLayout>



</LinearLayout>